# LOL-Coin

./: Anchor.toml  Cargo.toml  Dargo.toml  LICENSE  README.md  V main.rs  Whis  config  logs  src  validator daemon  validator_config.toml
programs/LOL-Coin/: Cargo.toml
programs/LOL-Coin/src/: lib.rs
